<resources>
    <string name="app_name">TaskGame</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open" translatable="false">Navigation Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Navigation Drawer Close</string>
    <string name="username_hint" translatable="false">Username</string>
    <string name="email_hint" translatable="false">Email</string>
    <string name="password_hint" translatable="false">Password</string>
    <string name="confirm_password_hint" translatable="false">Confirm password</string>
    <string name="register_button" translatable="false">Register</string>
    <string name="login" translatable="false">Login</string>
    <string name="create_account" translatable="false">Don\'t have an account? Register</string>
    <string name="category_name" translatable="false">Category name</string>
    <string name="logout" translatable="false">Logout</string>
    <string name="email_example" translatable="false">email@example.com</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="level">Level: %1$d</string>
    <string name="title">Title: %1$s</string>
    <string name="power_points">Power Points (PP): %1$d</string>
    <string name="experience_points">Experience Points (XP): %1$d</string>
    <string name="coins">Coins: %1$d</string>
    <string name="change_password">Change password</string>
    <string name="current_password_hint">Current password</string>
    <string name="new_password_hint">New password</string>
    <string name="equipment_name">Equipment name</string>
    <string name="equpiment_description">Description for equipment</string>
    <string name="equipment_price">0</string>
    <string name="equipment_type">Equipment type\n</string>
    <string name="buy_button">Buy</string>
    <string name="filters">FILTER</string>
    <string name="shop">Shop</string>
    <string name="activate_button">Activate</string>
    <string name="neededXp">XP needed for level up: %1$d</string>
    <string name="LevelView">Level</string>
    <string name="title_only">%1$s</string>
    <string name="earn_xp">GAIN XP</string>
    <string name="fight">FIGHT</string>
    <string name="boss_fight">Boss Fight</string>
    <string name="upgrade_button">UPGRADE</string>
    <string name="upgrade_cost">Upgrade cost: %1$d</string>
    <string name="win">YOU WIN!</string>
    <string name="claim_prize">CLAIM PRIZE</string>
    <string name="invite">INVITE TO ALLIANCE</string>
    <string name="search">SEARCH</string>
    <string name="friends">Friends</string>
    <string name="search_fragment">Search</string>
    <string name="add_friend">ADD AS FRIEND</string>
    <string name="friend_requests">Friend requests</string>
    <string name="alliance">Alliance</string>
    <string name="create_alliance">Create alliance</string>
    <string name="alliance_name_hint">Alliance name</string>
    <string name="delete">Delete</string>
    <string name="leave">Leave</string>
    <string name="owner">OWNER</string>
    <string name="members">MEMBERS</string>
    <string name="chat">CHAT</string>
    <string name="streak">Streak: %1$d days</string>
    <string name="viewStatistics">VIEW STATISTICS</string>
    <string name="taskStreak">"Task streak: %1$d"</string>
    <string name="badges">Badges</string>

</resources>