<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/fragmentHome"
        android:title="Home" />
    <item
        android:id="@+id/fragmentProfile"
        android:title="Profile"
        />
    <item
        android:id="@+id/fragmentCategory"
        android:title="Categories" />
    <item
        android:id="@+id/fragmentEquipmentShop"
        android:title="@string/shop" />
    <item
        android:id="@+id/fragmentLevels"
        android:title="@string/LevelView" />
    <item
        android:id="@+id/fragmentEquipmentActivation"
        android:title="@string/boss_fight" />
    <item
        android:id="@+id/fragmentFriends"
        android:title="@string/friends" />
    <item
        android:id="@+id/fragmentFriendRequests"
        android:title="@string/friend_requests" />

    <item
        android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:icon="@drawable/ic_logout" />

</menu>
