<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_navigation"
    app:startDestination="@id/fragmentHome">


    <fragment
        android:id="@+id/fragmentHome"
        android:name="com.example.taskgame.view.fragments.FragmentHome"
        android:label="FragmentHome"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/fragmentCategory"
        android:name="com.example.taskgame.view.fragments.CategoryFragment"
        android:label="Categories"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/fragmentProfile"
        android:name="com.example.taskgame.view.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/fragmentEquipmentShop"
        android:name="com.example.taskgame.view.fragments.EquipmentShopFragment"
        android:label="@string/shop"
        tools:layout="@layout/fragment_equipment_shop">
    </fragment>
    <fragment
        android:id="@+id/fragmentLevels"
        android:name="com.example.taskgame.view.fragments.LevelsFragment"
        android:label="@string/LevelView"
        tools:layout="@layout/fragment_levels">
    </fragment>
    <fragment
        android:id="@+id/fragmentEquipmentActivation"
        android:name="com.example.taskgame.view.fragments.EquipmentActivationFragment"
        android:label="@string/boss_fight"
        tools:layout="@layout/fragment_equipment_activation">
    </fragment>
    <fragment
        android:id="@+id/fragmentFriends"
        android:name="com.example.taskgame.view.fragments.FriendsFragment"
        android:label="@string/friends"
        tools:layout="@layout/fragment_friends">
        <action
            android:id="@+id/action_friendsFragment_to_searchFragment"
            app:destination="@id/fragmentSearch" />
        <action
            android:id="@+id/action_friendsFragment_to_friendsProfileFragment"
            app:destination="@id/fragmentFriendsProfile" />
    </fragment>
    <fragment
        android:id="@+id/fragmentSearch"
        android:name="com.example.taskgame.view.fragments.SearchFragment"
        android:label="@string/search_fragment"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_friendsProfileFragment"
            app:destination="@id/fragmentFriendsProfile" />
    </fragment>
    <fragment
        android:id="@+id/fragmentFriendsProfile"
        android:name="com.example.taskgame.view.fragments.FriendsProfileFragment"
        android:label="Friend Profile"
        tools:layout="@layout/fragment_friends_profile">
        <argument
            android:name="friendEmail"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/fragmentFriendRequests"
        android:name="com.example.taskgame.view.fragments.FriendRequestsFragment"
        android:label="@string/friend_requests"
        tools:layout="@layout/fragment_friend_requests">
    </fragment>
    <fragment
        android:id="@+id/allianceFragment"
        android:name="com.example.taskgame.view.fragments.AllianceFragment"
        android:label="Alliance"
        tools:layout="@layout/fragment_alliance">
        <argument
            android:name="name"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.taskgame.view.fragments.ChatFragment"
        android:label="Alliance Chat"
        tools:layout="@layout/fragment_chat">
        <argument
            android:name="allianceName"
            app:argType="string" />
    </fragment>


</navigation>