<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="@drawable/product_card_background"
    android:layout_marginVertical="10dp"
    android:id="@+id/equipment_card_item">

    <ImageView
        android:id="@+id/equipment_image"
        android:layout_width="170dp"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/equipment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/equipment_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/equipment_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/equipment_type"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/equipment_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/equpiment_description"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <TextView
                android:id="@+id/equipment_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/equipment_price"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_green_dark"
                android:layout_marginEnd="10dp"/>

            <Button
                android:id="@+id/buy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buy_button"
                android:backgroundTint="@android:color/holo_blue_light"
                android:textColor="@android:color/white"
                android:paddingHorizontal="20dp"
                android:layout_marginEnd="5dp"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
